syntax = "proto3";

option csharp_namespace = "Lab1_6.Kafka.Contracts.Orders";

message OrderCretated {
    string UserName = 1;
    int32 Sum = 2;
    int32 OrderId = 3;
}  
